syntax = "proto3";
package nl.svsticky.chroma;

message CreatePhotoRequest {
  optional string albumId = 1;
  bytes data = 2;
}